--- a/article.ipynb
+++ b/article.ipynb
@@ -3608,6 +3608,9 @@
     }
    }
   },
+  "jupytext": {
+   "formats": "ipynb,md"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
