correction anchor / https://github.com/C2DH/jdh-notebook/issues/185

--- a/article.ipynb
+++ b/article.ipynb
@@ -136,7 +136,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "anchor-1-1-1"
+    ]
+   },
    "source": [
     "### Choosing Software for the Infrastructure"
    ]
@@ -153,7 +161,12 @@
        }
       ]
      }
-    }
+    },
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "source": [
     "The 2000s saw the development of platforms that provided direct access to 3D, such as Unity and Second Life. Scholarship in 3D for the web necessitated a significant investment of time, money and resources to develop within these platforms, with many projects becoming unusable or obsolete due to changes in web technology (such as changes in browser standards, as was the case for the [Unity Web Player](https://unity.com/releases/editor/whats-new/5.0.0) transition to the plug-in free WebGL) or the academic shift away from Second Life due to Linden Labs increase in their pricing model (<cite id=\"cite2c-8908013/AIMIM5RK\"><a href=\"#cite2c%7C8908013%2FAIMIM5RK\">(Vosinakis & Tsakonas 2016)</a></cite>). In the case of Unity, for 3D gaming companies, these types of updates can be readily accommodated, but for small, one-off funded 3D heritage projects, it frequently means the end of publication on the web ([Figure 1](#anchor-figure-1-*)).\n",
@@ -2109,7 +2122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is not a consistent semantic language associated with 3D interfaces. For those typically developed in Unity, the ability to create a user experience and bespoke interface to support that experience is a strength of the system. Other 3D viewers (see [Section 1.1](#anchor-1-1-1) for a review some of these) do not share a semantic language of icons, the spatial arrangement of model to text to multimedia, animations (e.g., camera angles and viewpoints), and first vs third person navigation, which would make it easier for users to engage with multiple interfaces and take full advantage of the affordances of the systems.  \n",
+    "There is not a consistent semantic language associated with 3D interfaces. For those typically developed in Unity, the ability to create a user experience and bespoke interface to support that experience is a strength of the system. Other 3D viewers (see [Choosing Software for the Infrastructure](#anchor-1-1-1) for a review some of these) do not share a semantic language of icons, the spatial arrangement of model to text to multimedia, animations (e.g., camera angles and viewpoints), and first vs third person navigation, which would make it easier for users to engage with multiple interfaces and take full advantage of the affordances of the systems.  \n",
     "\n",
     "While analysis of the feedback revealed a generally positive response to navigation within Voyager, the lack of an intuitive understanding of the interface’s semantics, impeded users' engagement. There was no onboarding guide to the user interface, and while there are tool tips when one hovers over an icon, it was not necessarily clear what, for example, an ‘interactive tour’ entailed, or why one would want to ‘read articles’ if they  were engaging with 3D. Hence several users did not take advantage of all the navigational throughways facilitated by the interface (e.g., tours, navigating from one article to the next,  or navigating to articles via hotspot annotation). This lack of clarity made their journey through the interface haphazard and somewhat random. Those that missed the tour feature missed out on camera viewpoints that supported the narration. Thus the semantics of system features need to be more intuitive, coupled with clear help and tool tips."
    ]
@@ -3648,7 +3661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
