Final Final Update
The same as previous update -- URL's updated to the most stable link. And some text adjusted.

--- a/article.ipynb
+++ b/article.ipynb
@@ -1290,7 +1290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once all preparatory materials and mappings were complete, we came together to implement the content and configure the tours in Voyager.  The implementation is embedded below ([Figure 14](#anchor-figure-14-*)) and can be accessed via the [PURE3D Infrastructure](https://editions.pure3d.eu/project/1/edition/1/index.html). While we implemented using Voyager version 0.17.0, it has, since the time of publication, been updated and is currently at v.0.46.1. Therefore, there has been both minor and major changes to Voyager's functionality since we initially created the edition. This article describes our experiences and workflows at the time of implementation using the 17th version of the application. "
+    "Once all preparatory materials and mappings were complete, we came together to implement the content and configure the tours in Voyager.  The implementation is embedded below ([Figure 14](#anchor-figure-14-*)) and can be accessed via the [PURE3D Infrastructure](https://editions.pure3d.eu/project/1/edition/1/index.html). "
    ]
   },
   {
@@ -1358,6 +1358,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "While we implemented using Voyager version 0.17.0, it has, since the time of publication, been updated and is currently at v.0.46.1. Therefore, there has been both minor and major changes to Voyager's functionality since we initially created the edition. This article describes our experiences and workflows at the time of implementation using the 17th version of the application. \n",
+    "\n",
     "In the process of inputting content and making configurations, we discovered a number of visual and conceptual challenges that we had not anticipated. For example, the large number of hotspot annotations crowded the 3D object and sometimes prevented visibility of other annotations ([Figure 15: Left](#anchor-figure-15-*)). To counter this, annotations were subdivided into three groups using the Tag feature in Voyager. We also colour-coded the different groups to help with visual differentiation ([Figure 15: Right](#anchor-figure-15-*))."
    ]
   },
